# VMEM_Manager

./: CMakeLists.txt  plan.xml
src/memory/: BackingStore.cpp  BackingStore.h  PhysicalMemory.cpp  PhysicalMemory.h
src/paging/: Types.cpp  Types.h
src/policy/: IReplacement.h
src/util/: Span.h
src/utils/: Span.h
